<resources>
    <string name="app_name">ShoppingApp</string>

    <!-- Activity Titles -->
    <string name="title_activity_main_activity">My Shopping Lists</string>
    <string name="title_activity_shopping_list">List Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Action Bar -->
    <string name="action_clear_list">Clear List</string>
    <string name="action_delete_list">Delete List</string>
    <string name="action_share_list">Share List</string>
    <string name="action_settings">Settings</string>

    <!-- Shopping List Action View -->
        <!-- Buttons -->
    <string name="button_add">Add</string>
    <string name="button_remove">Remove Selected</string>
        <!-- Input -->
    <string name="input_list_name">List Name</string>
    <string name="input_product_name">New item</string>
    <string name="input_product_amount">0</string>

        <!-- Confirm dialog -->
    <string name="confirm_btn_yes">Yes</string>
    <string name="confirm_btn_no">No</string>

    <string name="confirm_delete_heading">Confirmation</string>
    <string name="confirm_delete_message">Are you sure, you want to remove all products?</string>

    <string name="confirm_clear_list_heading">Confirmation</string>
    <string name="confirm_clear_list_message">Are you sure, you want to remove all products?</string>

    <!-- Authentication -->
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>

    <!-- Arrays -->
    <string-array name="measurments_array">
        <item>pcs</item>
        <item>g</item>
        <item>kg</item>
        <item>l</item>
        <item>pack</item>
    </string-array>
    <string-array name="measurments_values">
        <item>pcs</item>
        <item>g</item>
        <item>kg</item>
        <item>l</item>
        <item>pack</item>
    </string-array>
    <string-array name="gender_values">
        <item>male</item>
        <item>female</item>
    </string-array>
    <string-array name="gender_type">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="list_input_error_message">Enter a list name and try again.</string>
    <string name="list_input_error_title">Missing Input</string>
    <string name="product_input_error_message">Enter a name for the product and try again.</string>
    <string name="product_input_error_title">No name found</string>
    <string name="product_remove_error_message">No product selected</string>
    <string name="product_remove_error_title">Select a product to remove adn then press \'Remove Selected\' button.</string>


</resources>
