<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/listTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/inputProductName"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_product_name"
            />

        <EditText
            android:id="@+id/inputProductAmount"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_product_amount"
            android:inputType="number"
            android:layout_weight="0.76" />

        <Spinner
            android:id="@+id/spinnerProductMeasure"
            android:layout_width="57dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonProductAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add" />

    <ListView
        android:id="@+id/listProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.95"
        android:fastScrollEnabled="false">
    </ListView>

    <Button
        android:id="@+id/buttonProductDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_remove" />

</LinearLayout>